Fix CORS bean conflict by removing duplicate CorsConfig class